# ubi-interact-ocr-module

./: .gitignore  .readthedocs.yaml  README.md  README.rst  perf_logging.yaml  setup.cfg
doc/source/: conf.py
doc/source/api/: ubii.processing_modules.ocr.data.rst
docs/source/: conf.py  index.rst
docs/source/api/: ubii.processing_modules.ocr.data.rst  ubii.processing_modules.ocr.rst  ubii.processing_modules.rst  ubii.rst
src/ubii/processing_modules/: coco_ssd_fake.py
src/ubii/processing_modules/ocr/: coco_ssd_fake.py  tesseract_ocr.py
src/ubii/processing_modules/ocr/data/: __init__.py
test/: conftest.py  pytest.ini  test_processing.py
