[metadata]
name = ubii-processing-module-ocr
url = https://github.com/saggitar/ubii-interact-ocr-module.git

[options]
python_requires = >=3.7
install_requires =
    ubii-python-node >= 0.1.dev41
    tesserocr
    opencv-contrib-python
    Pillow
    Pillow-PIL
    numpy
    importlib_resources;python_version<"3.8"
    backports.cached_property;python_version<"3.8"


package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-asyncio
