[metadata]
name = ubii-processing-module-ocr
url = https://github.com/saggitar/ubii-interact-ocr-module.git
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
description = "Ubi Interact Processing Module to perform OCR tasks via Tesseract"
long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
keywords = ocr, tesseract, ubi-interact, ubii, opencv
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    ubii-node-python >= 0.1.dev41
    tesserocr
    opencv-contrib-python
    Pillow
    Pillow-PIL
    numpy
    importlib_resources;python_version<"3.8"
    backports.cached_property;python_version<"3.8"


package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
ubii.processing_modules =
    tesseract_ocr_pure = ubii.processing_modules.ocr.tesseract_ocr:TesseractOCR_PURE
    tesseract_ocr_mser = ubii.processing_modules.ocr.tesseract_ocr:TesseractOCR_MSER
    tesseract_ocr_east = ubii.processing_modules.ocr.tesseract_ocr:TesseractOCR_EAST

[options.extras_require]
test =
    pytest
    pytest-asyncio
