[metadata]
name = ubii-processing-module-ocr
url = https://github.com/saggitar/ubii-interact-ocr-module.git
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
description = "Ubi Interact Processing Module to perform OCR tasks via Tesseract"
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type= text/markdown
keywords = ocr, tesseract, ubi-interact, ubii, opencv
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    ubii-node-python >= 0.2.2.dev2
    tesserocr == 2.5.2
    importlib_resources;python_version<"3.8"
    opencv-contrib-python-headless==4.5.5.64
    backports.cached_property;python_version<"3.8"
    Pillow >= 5.2
    Pillow-PIL >= 0.1dev
    numpy


package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
ubii.processing_modules =
    ocr_pure = ubii.processing_modules.ocr.tesseract_ocr:TesseractOCR_PURE
    ocr_mser = ubii.processing_modules.ocr.tesseract_ocr:TesseractOCR_MSER
    ocr_east = ubii.processing_modules.ocr.tesseract_ocr:TesseractOCR_EAST

[options.extras_require]
test =
    ubii-node-python[test] >= 0.2.2.dev2

docs =
    sphinx == 5.0.2

dev =
    setuptools-changelog == 1.0.0

[tool.pylint.master]
extension-pkg-allow-list = ["cv2"]